--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
 	compile('org.springframework.cloud:spring-cloud-stream-binder-kafka')
 	compile('org.codehaus.groovy:groovy')
 	compile('org.codehaus.groovy:groovy-json')
+	compile group: 'commons-io', name: 'commons-io', version: '2.5'
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
