took out prints and change properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ logging.level.io.ossim.omar.scdf.parser=WARN
 
 extension=.email
 from=user
-message=hello
+body=hello
 
 # Don't use Cloud Formation
 cloud.aws.stack.auto=false
