--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,17 @@
-spring.cloud.stream.bindings.input.destination=sqs-messages
+spring.cloud.stream.bindings.input.destination=files-downloaded
 spring.cloud.stream.bindings.output.destination=files-parsed
 spring.cloud.stream.bindings.output.content.type=application/json
 server.port=0
 
 logging.level.org.springframework.web=ERROR
-logging.level.io.ossim.omar.scdf.parser=WARN
+logging.level.io.ossim.omar.scdf.parser=DEBUG
 
 extension=.email
-from=user
-body=hello
 
 # Don't use Cloud Formation
 cloud.aws.stack.auto=false
+cloud.aws.credentials.instanceProfile=true
+cloud.aws.region.auto=true
+
+#cloud.aws.credentials.accessKey=a
+#cloud.aws.credentials.secretKey=b
