--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ logging.level.org.springframework.web=ERROR
 logging.level.io.ossim.omar.scdf.parser=DEBUG
 
 extension=.email
+from=user
+body=hello
 
 # Don't use Cloud Formation
 cloud.aws.stack.auto=false
