--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ ext {
 dependencies {
 	compile('org.springframework.cloud:spring-cloud-starter-aws')
 	compile('org.springframework.cloud:spring-cloud-stream-binder-kafka')
+	compile('org.springframework.cloud:spring-cloud-starter-config')
 	compile('org.codehaus.groovy:groovy')
 	compile('org.codehaus.groovy:groovy-json')
 	compile group: 'commons-io', name: 'commons-io', version: '2.5'
