--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,11 @@ buildscript {
 	}
 	repositories {
 		mavenLocal()
-//		maven { url "${ossimMavenProxy}" }
-		maven { url "https://repo.grails.org/grails/core" }
-		maven { url "https://mvnrepository.com/artifact/com.google.code.gson/gson" }
+		maven { url "${ossimMavenProxy}" }
+		if( !System.env.WWW_CONNECTED || Boolean.parseBoolean( System.env.WWW_CONNECTED ) ) {
+			maven { url "https://repo.grails.org/grails/core" }
+			maven { url "https://mvnrepository.com/artifact/com.google.code.gson/gson" }
+		}
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -29,7 +31,11 @@ apply plugin: "maven"
 sourceCompatibility = 1.8
 
 repositories {
-	mavenCentral()
+	mavenLocal()
+	maven { url "${ossimMavenProxy}" }
+	if( !System.env.WWW_CONNECTED || Boolean.parseBoolean( System.env.WWW_CONNECTED ) ) {
+		mavenCentral()
+	}
 }
 
 
